# BAR_BuildAndRun_

./: CMakeLists.txt  Main.cpp  README.md  tmp.cpp  tmp.hpp
ALL/: ALL.cpp  ALL.hpp  CMakeLists.txt
Actions/: Actions.cpp  Actions.h  Actions.hpp  CMakeLists.txt
AnalyseMaps/: AnalyseText.cpp  AnalyseText.hpp  CMakeLists.txt  CreateMap.cpp  CreateMap.hpp  MapPrototypes.cpp  MapPrototypes.hpp  SetMap.cpp  SetMap.hpp
Common_libs/: CMakeLists.txt  errors.cpp  errors.hpp  iterators.hpp  random.cpp
Common_libs/Errors/: CMakeLists.txt  Errors.cpp  Errors.hpp  Errors_DEFINES.hpp  README.md
Common_libs/Errors/Examples/: Examples1.cpp  Examples2.cpp  Examples3.cpp
Common_libs/Matrix/: Buffer.hpp  CMakeLists.txt  Matrix.cpp  Matrix.hpp  Matrix_Class.hpp
Common_libs/Random/: CMakeLists.txt  Random.cpp  Random.hpp
Help/: CMakeLists.txt  Data.cpp  Data.h  DefinesFile.hpp  FastDraw.hpp  Help.cpp  Help.hpp  span.h
Help/Data/: CMakeLists.txt  Data.cpp  Data.hpp
Help/Direction/: CMakeLists.txt  Direction.cpp  Direction.hpp
Help/ParamCar/: CMakeLists.txt  ParamCar.cpp  ParamCar.hpp
Help/Picture/: CMakeLists.txt  Picture.cpp  Picture.hpp
Help/Text/: CMakeLists.txt  Text.cpp  Text.hpp
MainMenus/: CMakeLists.txt  MainMenus.cpp  MainMenus.hpp  Server.cpp  Server.hpp  ServerGame.cpp  ServerGame.hpp
Map/: CMakeLists.txt  Map.cpp  Map.h  Map.hpp  MapPrototypes.cpp  MapPrototypes.hpp  Map_Prototypes.h
MapTiles/: !FULL-DATA.txt  1.txt  2.txt  Accel.txt  Accell.txt  Begin.txt  Stoping.txt  Way_Out.txt
Menus/: CMakeLists.txt  Menus.cpp  Menus.h  Menus.hpp
Menus/Car/: CMakeLists.txt  MenusCar.cpp  MenusCar.hpp
Menus/Game/: CMakeLists.txt
Menus/Main/: CMakeLists.txt  MenusMain.cpp  MenusMain.hpp
Object/: CMakeLists.txt  Object.cpp  Object.hpp
Objects/: Tank.cpp  Tank.h
